src/app/home/home.component.css
/* @import url('https://fonts.googleapis.com/css2?family=Gloock&display=swap'); */

.moto {
    /* margin-top: 550px; */
    /* font-family: 'Gloock', serif; */
    font-size: 100px;
    font-weight: 700;
}

.custom-height {
    margin-top: 25vh;
    padding-left: 12vh;
}

.customContainer {
    width: 320px; 
    margin: 150px 500px; 
    perspective: 1000px;
}
    
.carousel {
    position: absolute; 
    width: 120%;
    height: 180%; 
    transform-style: preserve-3d;
    animation: rotate360 60s infinite forwards Linear;
}
    .image {
    position: absolute;
    width: 300px;
    height: 230px;
    top: 20px;
    left: 10px;
    right: 10px;
    background-size: cover;
    display: flex;
    box-shadow: 0px 25px 20px -20px rgba(0, 0, 0, 0.45), 25px 0 20px -20px rgba(0, 0, 0, 0.45);
    }
    
    @keyframes rotate360 {
    from {transform: rotateY(0deg);
    }
    to {
        transform: rotateY(-360deg);
    }
    }
   
    .image:nth-child(1) {
    background-image: url("https://cdn3.park4night.com/lieu/1000501_1000600/1000510_gd.jpg");
     transform: rotateY(1deg) translateZ(438px);
     -webkit-filter: brightness(150%);
    }
    .image:nth-child(2) {
    background-image: url("https://www.visitbend.com/wp-content/uploads/2018/04/camping-bend-oregon-1600x900.jpg");
     transform: rotateY(40deg) translateZ(438px);
     -webkit-filter: brightness(100%);
    }
    .image:nth-child(3) {
    background-image: url("https://cdn3.park4night.com/lieu/1000501_1000600/1000510_gd.jpg");
     transform: rotateY(80deg) translateZ(438px);
    }
    .image:nth-child(4) {
    background-image: url("https://feel-albania.com/wp-content/uploads/2020/02/Korabi-Tent.jpg");
     transform: rotateY(120deg) translateZ(438px);
    }
    .image:nth-child(5) {
        background-image: url("https://assets3.thrillist.com/v1/image/2698226/1200x630/flatten;crop_down;webp=auto;jpeg_quality=70");
         transform: rotateY(160deg) translateZ(438px);
        }
        .image:nth-child(6) {
        background-image: url("https://media.cntraveler.com/photos/607313c3d1058698d13c31b5/3:2/w_2454,h_1636,c_limit/FamilyCamping-2021-GettyImages-948512452-2.jpg");
         transform: rotateY(200deg) translateZ(438px);
        }
        .image:nth-child(7) {
        background-image: url("https://blog-assets.thedyrt.com/uploads/2018/09/craterlake.jpg");
         transform: rotateY(240deg) translateZ(438px);
        }
        .image:nth-child(8) {
        background-image: url("https://lp-cms-production.imgix.net/2020-11/wildcamping.jpg");
         transform: rotateY(280deg) translateZ(438px);
         
        }
        .image:nth-child(9) {
            background-image: url("https://cdn3.park4night.com/lieu/1000501_1000600/1000510_gd.jpg");
             transform: rotateY(320deg) translateZ(438px);
            }
   

